# llm_urska_be

./: .gitignore  Cargo.toml  README.md  db.sh  grafana.sh
src/: config.rs  main.rs
src/controllers/: collector.rs  mod.rs  reranker.rs
src/llm/: embedding.rs  loader.rs  mod.rs  model.rs  prompt.rs  tokenizer.rs
src/logging/: flush.rs  logger.rs  mod.rs
src/storage/: cache_wss.rs  mod.rs  mysql.rs  qdrant.rs
src/wss/: handler.rs  message.rs  mod.rs  operations.rs  server.rs
