[package]
name = "llm_usrka_be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.0", features = ["cuda"] }
candle-transformers = { version="0.4.1", features = ["cuda"]}
hf-hub = "0.3.2"
tokenizers = "0.19.1"

