[package]
name = "llm_usrka_be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.5.0", features = ["cuda"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.5.0", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.5.0", features = ["cuda"] }
hf-hub = "0.3.2"
log = "0.4.21"
once_cell = "1.19.0"
tokenizers = "0.19.1"
tokio = { version = "1.35.1", features = ["full", "rt-multi-thread"] }
tokio-tungstenite = "0.21.0"
futures-util = "0.3.30"
uuid = { version = "1.6.1", features = ["v4"] }
serde_any = "0.5.0" # JSON for parsing wss messages
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.116"
qdrant-client = "1.9.0"
tonic = "0.11.0"